--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.super89.supermegamod</groupId>
-  <artifactId>LearningPlugin</artifactId>
+  <artifactId>PetPlugin</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
